fix: Align cascader loading style & update doc (#17550)

--- a/components/cascader/style/index.less
+++ b/components/cascader/style/index.less
@@ -211,7 +211,7 @@
     }
 
     &-expand &-expand-icon,
-    &-expand &-loading-icon {
+    &-loading-icon {
       .iconfont-size-under-12px(10px);
 
       position: absolute;
